--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kzares-blog",
+  "name": "next-14-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.4",
+    "@clerk/nextjs": "^4.27.5",
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "^2.2.1",
+    "@types/react-datepicker": "^4.19.5",
+    "@uploadthing/react": "^6.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
+    "next": "14.0.4",
+    "query-string": "^8.1.0",
     "react": "^18",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "react-lazy-load-image-component": "^1.6.0"
+    "react-hook-form": "^7.49.0",
+    "react-icons": "^5.1.0",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-rnd": "^10.4.1",
+    "stripe": "^14.8.0",
+    "svix": "^1.15.0",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.0.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-lazy-load-image-component": "^1.6.3",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
