--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.1.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-rnd": "^10.4.1",
+    "recoil": "^0.7.7",
     "stripe": "^14.8.0",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.1.0",
