--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-hook/window-size": "^3.1.1",
     "@stripe/stripe-js": "^2.2.1",
     "@types/react-datepicker": "^4.19.5",
     "@uploadthing/react": "^6.0.2",
